<resources>
    <string name="app_name">walletChango</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="dashboard">Dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Wallet Chango</string>
    <string name="nav_header_subtitle">Your one stop crowd funding platform</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_project_details">ProjectDetails</string>
    <string name="title_activity_create_fund">Create Fund Request</string>
    <string name="title_activity_wallet">Wallet</string>
    <string name="short_description">Short Description</string>
    <string name="longer_description">Longer Description</string>
    <string name="cause_progress">CAUSE PROGRESS</string>
    <string name="raised_kshs">Raised Amount Kshs:  </string>
    <string name="total_investors">Total Investors : </string>
    <string name="your_wallet_amount_is">Previous is :</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_out">Log Out</string>
    <string name="send">Send</string>
    <string name="share">Share</string>
    <string name="profile">Profile</string>
    <string name="wallet">Wallet</string>
    <string name="deposit_now">Deposit Now</string>
    <string name="withdraw_amount">Withdraw Amount</string>
    <string name="card">Card</string>
    <string name="mpesa">Mpesa</string>
    <string name="select_deposit_type">Select Deposit Type</string>
    <string name="deposit_amount">Deposit Amount</string>
    <string name="kshs">Kshs</string>
    <string name="project_name">Project Name</string>
    <string name="project_details">Project Details</string>
    <string name="create">Create</string>
    <string name="home">Home</string>
    <string name="project">Projects</string>
    <string name="all_project">All Projects</string>
    <string name="view_full_statement">View Full Statement</string>
    <string name="invest">Invest</string>
    <string name="on_going_projects">On Going Projects</string>
    <string name="draft_projects">Draft \n Projects</string>
    <string name="completed_projects">Completed Projects</string>
</resources>
