<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/wallet_pic"
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:src="@drawable/ic_wallet" />

    <android.support.v7.widget.AppCompatTextView
        android:layout_margin="20dp"
        android:id="@+id/wallet_amount"
        android:textAlignment="center"
        android:layout_below="@+id/wallet_pic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/your_wallet_amount_is"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:weightSum="1">


        <TextView
            android:layout_width="0sp"
            android:layout_height="60sp"
            android:layout_weight="0.5"
            android:id="@+id/deposit_amount"
            android:background="@drawable/custom_primary_button"
            android:padding="10sp"
            android:text="@string/deposit_now"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textSize="20sp" />


        <TextView
            android:layout_width="0sp"
            android:layout_height="60sp"
            android:layout_weight="0.5"
            android:background="@drawable/custom_button"
            android:padding="10sp"
            android:text="@string/withdraw_amount"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textSize="20sp" />
    </LinearLayout>


</RelativeLayout>