<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.DepositAmount">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginRight="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_16"
        android:elevation="@dimen/dp_16">


        <RelativeLayout
            android:padding="@dimen/dp_20"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/payment_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_deposit_type" />
            <!--<view-->
                <!--android:layout_below="@+id/payment_header"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="1sp"/>-->

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/payment_header"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/dp_20"
                android:paddingRight="@dimen/dp_20"
                android:id="@+id/mpesa_selection"
                android:weightSum="1">

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/radio_pirates"
                    android:layout_width="0dp"
                    android:enabled="true"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/mpesa" />

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/radio_ninjas"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/card" />
            </RadioGroup>

            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@+id/mpesa_selection">

                <android.support.v7.widget.AppCompatEditText
                    android:layout_marginTop="@dimen/dp_10"
                    android:checked="true"
                    android:id="@+id/ed_amount_deposit"
                    android:background="@drawable/custom_borders"
                    android:layout_width="match_parent"
                    android:padding="@dimen/dp_16"
                    android:layout_height="wrap_content"
                    android:hint="@string/deposit_amount"
                    />

                <android.support.v7.widget.AppCompatTextView
                    android:layout_marginTop="@dimen/dp_10"
                    android:background="@drawable/custom_primary_button"
                    android:layout_width="match_parent"
                    android:padding="@dimen/dp_16"
                    android:layout_height="wrap_content"
                    android:hint="@string/deposit_amount"
                    android:textColor="@color/white"
                    android:onClick="btnPayMpesa"
                    />
            </android.support.v7.widget.LinearLayoutCompat>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>